TODO: animate profile img, componentize left aside

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -27,8 +27,10 @@
 		--color-gray: #BEBEBE;
 		--color-black: #1F1F1F;
 		--color-white: #f2f2f2;
-		--color-green-50: #21721268;
-
+		--color-green: #21721268;
+		--color-blue: #3838dd;
+		--color-red: #c84242;
+		--color-skyblue: #2cc5dc;
 		--color-foreground: #545454;
 	}
 
