--- a/src/components/asideInfo.astro
+++ b/src/components/asideInfo.astro
@@ -1,17 +1,27 @@
 ---
+import Image from 'astro/components/Image.astro';
+import roleImgSrc from '/public/imgs/roleImg.svg'
+import professionImgSrc from '/public/imgs/professionImg.svg'
+import profileImgSrc from '/public/imgs/profile.jpg'
+import communicationImgSrc from '/public/imgs/ss_communication.svg'
+import learningImgSrc from '/public/imgs/ss_learning.svg'
+import teamworkImgSrc from '/public/imgs/ss_teamwork.svg'
+import troubleshootingImgSrc from '/public/imgs/ss_troubleshooting.svg'
+import starEmptyImgSrc from '/public/imgs/star_empty.svg'
+import starImgSrc from '/public/imgs/star.svg'
+
 const name = "Fernando A.";
 
 const role = {
-    imgSrc: "imgs/roleImg.svg",
+    imgSrc: roleImgSrc,
     imgAlt: "role img",
     content: "Programador",
 };
 
-const phrase =
-    "Ya caminaste sobre fuego y sigues aquí, no dudes ni un segundo de ti.";
+const phrase = "Ya caminaste sobre fuego y sigues aquí, no dudes ni un segundo de ti.";
 
 const profession = {
-    imgSrc: "imgs/professionImg.svg",
+    imgSrc: professionImgSrc,
     imgAlt: "profession img",
     content: "Ingeniero de Sistemas Computacionales",
 };
@@ -19,58 +29,64 @@ const profession = {
 const softSkills = [
     {
         content: "Comunicación efectiva",
-        imgSrc: "imgs/ss_communication.svg",
+        imgSrc: communicationImgSrc,
         imgAlt: "communication img",
         stars: 5,
     },
     {
         content: "Trabajo en equipo",
-        imgSrc: "imgs/ss_teamwork.svg",
+        imgSrc: teamworkImgSrc,
         imgAlt: "teamwork img",
         stars: 4,
     },
     {
         content: "Aprendizaje continuo",
-        imgSrc: "imgs/ss_learning.svg",
+        imgSrc: learningImgSrc,
         imgAlt: "learning img",
         stars: 5,
     },
     {
         content: "Solución de problemas",
-        imgSrc: "imgs/ss_troubleshooting.svg",
+        imgSrc: troubleshootingImgSrc,
         imgAlt: "troubleshooting img",
         stars: 4,
     },
 ];
 
 const profileImg = {
-    src: "/imgs/profile.jpg",
+    src: profileImgSrc,
     alt: "profile img",
 };
 ---
 
 <aside class="info">
     <div class="info__role">
-        <img class="info__role__img" src={role.imgSrc} alt={role.imgAlt} />
+        <Image loading={'eager'} class="info__role__img" src={role.imgSrc} alt={role.imgAlt} />
         <small class="info__role__text">{role.content}</small>
     </div>
     <h2 class="info__name">{name}</h2>
     <p class="info__phrase">{phrase}</p>
     <div class="info__profession">
-        <img
+        <Image
+            loading={'eager'}
             class="info__profession__img"
             src={profession.imgSrc}
             alt={profession.imgAlt}
         />
         <h3 class="info__profession__text">{profession.content}</h3>
     </div>
-    <img class="info__profile-img" src={profileImg.src} alt={profileImg.alt} />
+    <Image loading={'eager'} class="info__profile-img" src={profileImg.src} alt={profileImg.alt} />
     <div class="info__soft-skills">
         {
             softSkills.map((item) => {
                 return (
                     <div class="info__soft-skills__item">
-                        <img
+                        <span />
+                        <span />
+                        <span />
+                        <span />
+                        <Image
+                            loading={'eager'}
                             class="info__soft-skills__item__img"
                             src={item.imgSrc}
                             alt={item.imgAlt}
@@ -81,9 +97,10 @@ const profileImg = {
                         <div class="info__soft-skills__item__stars">
                             {Array.from({ length: 5 }).map((_, pos) => {
                                 return (
-                                    <img
+                                    <Image
+                                        loading={'eager'}
                                         class="info__soft-skills__item__stars__img"
-                                        src={pos < item.stars ? "/imgs/star.svg" : "/imgs/star_empty.svg"}
+                                        src={pos < item.stars ? starImgSrc : starEmptyImgSrc}
                                         alt="star img"
                                     />
                                 );
@@ -116,14 +133,23 @@ const profileImg = {
         gap: 0.5rem;
     }
 
+    .info__role:hover,
+    .info__role__img:hover,
+    .info__role__text:hover {
+        cursor: default;
+    }
+
     .info__role__img {
         width: 1.5rem;
+        height: 1.5rem ;
+        animation: glitch-img 3s infinite;
     }
 
     .info__role__text {
         color: var(--color-gray);
         font-family: "EuroStyle";
         font-size: 1rem;
+        animation: glitch-text 3s infinite;
     }
 
     .info__name {
@@ -151,11 +177,14 @@ const profileImg = {
         gap: 1rem;
         padding: 1rem;
         height: 1.5rem;
-        background-color: var(--color-green-50);
+        background-color: var(--color-green);
     }
 
     .info__profession__img {
         width: 2rem;
+        height: 2rem;
+
+        animation: profession-img-colors 1.5s alternate infinite ease-in;
     }
 
     .info__profession__text {
@@ -164,10 +193,13 @@ const profileImg = {
         font-size: medium;
         font-family: "Mastodon";
         color: var(--color-white);
+
+        animation: profession-text-colors 1.5s alternate infinite ease-in;
     }
 
     .info__profile-img {
         width: 90%;
+        height: 90%;
         padding: 0.3rem 0;
     }
 
@@ -180,16 +212,83 @@ const profileImg = {
 
     .info__soft-skills__item {
         display: grid;
-        grid-template-columns: .5fr 1fr .5fr;
+        grid-template-columns: .5fr 1fr .8fr;
         grid-template-areas: "soft-skill__img soft-skill__text soft-skill__stars";
         place-content: center;
         width: 100%;
-        gap:.3rem;
+        height: 4rem;
+        gap: .3rem;
         background-color: var(--color-foreground);
+
+        position: relative;
+
+        overflow: hidden;
+
+        transition: transform 0.3s ease-in-out;
+    }
+
+    .info__soft-skills__item:hover{
+        transform: scale(1.03);
+        background-color: var(--color-black)
+    }
+
+    .info__soft-skills__item span{
+        position: absolute;
+        background: linear-gradient(to right, transparent, var(--color-white), transparent);
+        opacity: 0;
+        pointer-events: none;
+        transition: opacity 0.3s ease;
+        z-index: 10;
+    }
+
+    .info__soft-skills__item:hover span{
+        opacity: 1;
+        pointer-events: auto;
+    }
+
+    .info__soft-skills__item span:nth-child(1){
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: .5rem;
+        background: linear-gradient(to right, transparent, var(--color-skyblue));
+        animation: soft-skills__item--a1 2s linear infinite;
+    }
+    .info__soft-skills__item span:nth-child(2){
+        position: absolute;
+        top: 0;
+        right: 0;
+        width: .5rem;
+        height: 100%;
+        background: linear-gradient(to bottom, transparent, var(--color-skyblue));
+        animation: soft-skills__item--a2 2s linear infinite;
+        animation-delay: 1s;
+    }
+    .info__soft-skills__item span:nth-child(3){
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        width: 100%;
+        height: .5rem;
+        background: linear-gradient(to left, transparent, var(--color-skyblue));
+        animation: soft-skills__item--a3 2s linear infinite;
+        animation-delay: 2s;
+    }
+    .info__soft-skills__item span:nth-child(4){
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        width: .5rem;
+        height: 100%;
+        background: linear-gradient(to top, transparent, var(--color-skyblue));
+        animation: soft-skills__item--a4 2s linear infinite;
+        animation-delay: 3s;
     }
 
     .info__soft-skills__item__img {
         width: 1.5rem;
+        height: 1.5rem;
         margin: auto;
     }
 
@@ -200,11 +299,95 @@ const profileImg = {
         font-family: "EuroStyle";
     }
 
+    .info__soft-skills__item__text:hover {
+        cursor: default;
+    }
+
     .info__soft-skills__item__stars{
         display: flex;
+        margin: auto;
     }
 
     .info__soft-skills__item__stars__img{
         width: .8rem;
+        height: .8rem;
+    }
+
+    { /* ANIMACIONES */}
+
+    @keyframes glitch-img {
+        0%, 
+        100% {
+        filter: drop-shadow(0 0 var(--color-green)) drop-shadow(0 0 var(--color-blue));
+        }
+        50% {
+            filter: drop-shadow(-0.1rem 0 var(--color-red)) drop-shadow(0.2rem 0 var(--color-skyblue));
+        }
+    }
+
+    @keyframes glitch-text {
+        0%,
+        100% {
+            text-shadow: 
+                var(--color-green) 0px 0px,
+                var(--color-blue) 0px 0px;
+        }
+        50% {
+            text-shadow: 
+                var(--color-red) -0.1rem 0px,
+                var(--color-skyblue) .2rem 0px;
+        }
+    }
+
+    @keyframes profession-text-colors {
+        0%{ text-shadow: 0 0 1rem var(--color-skyblue) }
+        25%{ text-shadow: 0 0 1rem var(--color-blue) }
+        50%{ text-shadow: 0 0 1rem var(--color-green) }
+        75%{ text-shadow: 0 0 1rem var(--color-red) }
+        100% { text-shadow: 0 0 1rem var(--color-skyblue) }
+    }
+
+    @keyframes profession-img-colors {
+        0%{ filter: drop-shadow(0 0 1rem var(--color-skyblue)); }
+        25%{ filter: drop-shadow(0 0 1rem var(--color-blue)); }
+        50%{ filter: drop-shadow(0 0 1rem var(--color-green)); }
+        75%{ filter: drop-shadow(0 0 1rem var(--color-red)); }
+        100% { filter: drop-shadow(0 0 1rem var(--color-blue)); }
+    }
+
+    @keyframes soft-skills__item--a1 {
+        0%{
+            transform: translateX(-100%);
+        }
+        100%{
+            transform: translateX(100%);
+        }
+    }
+
+    @keyframes soft-skills__item--a2 {
+        0%{
+            transform: translateY(-100%);
+        }
+        100%{
+            transform: translateY(100%);
+        }
+    }
+
+    @keyframes soft-skills__item--a3 {
+        0%{
+            transform: translateX(100%);
+        }
+        100%{
+            transform: translateX(-100%);
+        }
+    }
+
+    @keyframes soft-skills__item--a4 {
+        0%{
+            transform: translateY(100%);
+        }
+        100%{
+            transform: translateY(-100%);
+        }
     }
 </style>
